--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,6 +3,12 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/home"
+            android:title="@string/home"
+            android:checked="true"
+            />
+        <item
             android:id="@+id/nav_products"
             android:icon="@drawable/product"
             android:title="@string/our_products" />
