--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
             android:checked="true"
             />
         <item
+            android:id="@+id/nav_news"
+            android:icon="@drawable/news"
+            android:title="@string/news" />
+        <item
             android:id="@+id/nav_products"
             android:icon="@drawable/product"
             android:title="@string/our_products" />
