--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="logoHeight">72dp</dimen>
     <dimen name="logoWidth">72dp</dimen>
+    <dimen name="home_banner_height">220dp</dimen>
+    <dimen name="cardview_home_height">75dp</dimen>
 </resources>
