--- a/app/src/main/res/layout/cardview_home_fidelity.xml
+++ b/app/src/main/res/layout/cardview_home_fidelity.xml
@@ -16,12 +16,13 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="-10dp"
             app:srcCompat="@drawable/euro" />
 
     </LinearLayout>
 
     <GridLayout
-        android:layout_width="294dp"
+        android:layout_width="match_parent"
         android:layout_height="75dp"
         android:layout_marginLeft="50dp"
         android:orientation="horizontal">
