--- a/app/src/main/res/layout/cardview_home_store.xml
+++ b/app/src/main/res/layout/cardview_home_store.xml
@@ -15,12 +15,13 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="6dp"
+            android:layout_marginTop="-10dp"
             app:srcCompat="@drawable/marker" />
 
     </LinearLayout>
 
     <GridLayout
-        android:layout_width="122dp"
+        android:layout_width="match_parent"
         android:layout_height="75dp"
         android:layout_marginLeft="50dp"
         android:orientation="horizontal">
@@ -40,7 +41,7 @@
 
         <TextView
             android:id="@+id/store"
-            android:layout_width="100dp"
+            android:layout_width="147dp"
             android:layout_height="36dp"
             android:layout_column="0"
             android:layout_marginLeft="10dp"
