--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,13 +6,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
+    <com.synnapps.carouselview.CarouselView
         android:id="@+id/home_banner"
         android:layout_width="wrap_content"
         android:layout_height="300dp"
-        android:layout_weight="1"
-        android:scaleType="fitXY"
-        app:srcCompat="@drawable/home_banner" />
+        app:srcCompat="@drawable/banner1"
+        app:fillColor="#FFFFFFFF"
+        app:pageColor="#00000000"
+        app:radius="4dp"
+        app:slideInterval="3000"
+        app:strokeColor="#FF777777"
+        app:strokeWidth="1dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,45 +27,56 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="310dp"
-            android:columnCount="2"
-            android:orientation="vertical">
+            android:horizontalSpacing="0dp"
+            android:numColumns="2"
+            android:orientation="vertical"
+            android:verticalSpacing="0dp">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/shopping_list_cardview"
-                android:layout_width="180dp"
                 android:layout_height="@dimen/cardview_home_height"
                 android:layout_column="0"
+                android:layout_columnSpan="1"
+                android:layout_gravity="fill_horizontal"
                 android:layout_row="0"
+                android:layout_rowSpan="1"
                 app:cardUseCompatPadding="true">
 
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
                 android:id="@+id/stores_cardview"
-                android:layout_width="180dp"
                 android:layout_height="@dimen/cardview_home_height"
                 android:layout_column="1"
+                android:layout_columnSpan="1"
+                android:layout_gravity="fill_horizontal"
                 android:layout_row="0"
+                android:layout_rowSpan="1"
                 app:cardUseCompatPadding="true">
 
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
                 android:id="@+id/products_cardview"
-                android:layout_width="180dp"
                 android:layout_height="@dimen/cardview_home_height"
                 android:layout_column="0"
+                android:layout_columnSpan="1"
+                android:layout_gravity="fill_horizontal"
                 android:layout_row="1"
+                android:layout_rowSpan="1"
                 app:cardUseCompatPadding="true">
 
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
                 android:id="@+id/news_cardview"
-                android:layout_width="180dp"
                 android:layout_height="@dimen/cardview_home_height"
                 android:layout_column="1"
-                android:layout_row="1" />
+                android:layout_columnSpan="1"
+                android:layout_gravity="fill_horizontal"
+                android:layout_row="1"
+                android:layout_rowSpan="1"
+                app:cardUseCompatPadding="true"/>
 
 
         </GridLayout>
@@ -70,8 +85,6 @@
             android:id="@+id/fidelity_status"
             android:layout_width="match_parent"
             android:layout_height="75dp"
-            android:layout_column="0"
-            android:layout_row="1"
             app:cardUseCompatPadding="true" />
     </LinearLayout>
 
