--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@color/tw__composer_deep_gray"
+    android:background="@color/tw__blue_default"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -16,9 +16,9 @@
         android:id="@+id/imageView"
         android:layout_width="@dimen/logoWidth"
         android:layout_height="@dimen/logoHeight"
+        android:contentDescription="@string/tobeortohavelogo"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/logo"
-        android:contentDescription="@string/tobeortohavelogo" />
+        app:srcCompat="@drawable/logo" />
 
     <TextView
         android:id="@+id/usernameTextView"
