--- a/app/src/main/res/layout/cardview_home_shopping_list.xml
+++ b/app/src/main/res/layout/cardview_home_shopping_list.xml
@@ -40,14 +40,15 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/number"
-            android:layout_width="wrap_content"
+            android:id="@+id/number_todolist"
+            android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_column="0"
             android:layout_marginLeft="10dp"
             android:layout_row="1"
             android:layout_weight="1"
-            android:text="50"
+            android:text="0"
+            android:textAlignment="textEnd"
             android:textSize="30sp" />
 
         <TextView
