--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="logoWidth">72dp</dimen>
     <dimen name="home_banner_height">220dp</dimen>
     <dimen name="cardview_home_height">75dp</dimen>
+    <dimen name="productDimen">160dp</dimen>
 </resources>
