--- a/app/src/main/res/layout/cardview_products_product.xml
+++ b/app/src/main/res/layout/cardview_products_product.xml
@@ -13,7 +13,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:background="@color/tw__light_gray">
 
             <TextView
@@ -25,14 +25,13 @@
         </RelativeLayout>
 
         <FrameLayout
-            android:layout_width="180dp"
-            android:layout_height="115dp">
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
 
             <ImageView
-                android:id="@+id/imageNews"
-                android:layout_width="180dp"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/placeholder" />
+                android:id="@+id/imageProduct"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
         </FrameLayout>
 
@@ -40,9 +39,11 @@
             android:id="@+id/product_price"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:ellipsize="end"
             android:maxLines="1"
-            android:textSize="12sp" />
+            android:text="1000.50€"
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
