--- a/app/src/main/res/layout/price_comparator_item.xml
+++ b/app/src/main/res/layout/price_comparator_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:cardUseCompatPadding="true">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -36,6 +37,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:text="TextView"
+            android:textColor="@android:color/holo_red_dark"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.94"
