--- a/app/src/main/res/layout/cardview_home_fidelity.xml
+++ b/app/src/main/res/layout/cardview_home_fidelity.xml
@@ -37,7 +37,7 @@
             android:layout_row="0"
             android:layout_weight="1"
             android:text="Ma cagnotte"
-            android:textColor="@color/tw__blue_pressed"
+            android:textColor="@android:color/holo_green_dark"
             android:textStyle="bold" />
 
         <TextView
