--- a/app/src/main/res/layout/cardview_home_fidelity.xml
+++ b/app/src/main/res/layout/cardview_home_fidelity.xml
@@ -41,14 +41,14 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/number"
+            android:id="@+id/points"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_marginLeft="10dp"
             android:layout_row="1"
             android:layout_weight="1"
-            android:text="10,50€"
+            android:text="0 pts"
             android:textSize="30sp" />
 
         <TextView
