--- a/app/src/main/res/layout/fragment_sponsorhip.xml
+++ b/app/src/main/res/layout/fragment_sponsorhip.xml
@@ -13,14 +13,10 @@
         android:layout_height="203dp"
         app:srcCompat="@drawable/qrcode_user"
         tools:layout_constraintTop_creator="1"
-        tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.117" />
+        android:layout_marginTop="27dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/shareTextView"
@@ -28,9 +24,7 @@
         android:layout_height="82dp"
         android:text="@string/how_to_share"
         android:textAlignment="center"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
@@ -51,5 +45,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.508"
-        app:layout_constraintVertical_bias="0.664" />
+        app:layout_constraintVertical_bias="0.898"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
+
+    <TextView
+        android:id="@+id/bonus_earned"
+        android:layout_width="264dp"
+        android:layout_height="84dp"
+        android:text="0 amis parrainés = 0 pts supplémentaires"
+        android:textSize="24sp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.745" />
 </android.support.constraint.ConstraintLayout>
