--- a/app/src/main/res/layout/fragment_gift_cards.xml
+++ b/app/src/main/res/layout/fragment_gift_cards.xml
@@ -42,7 +42,41 @@
         android:layout_height="wrap_content"
         android:text="Ces fonctionnalités necessitent que QR Droid soit installé"
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="-7dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteX="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.984" />
+
+    <ImageView
+        android:id="@+id/qrcode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:color/transparent"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/create_qrcode"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/decode_qrcode"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/credits"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Solde courant: 0 points"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/create_qrcode"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.698" />
 
 </android.support.constraint.ConstraintLayout>
