--- a/app/src/main/res/layout/fragment_sponsorhip.xml
+++ b/app/src/main/res/layout/fragment_sponsorhip.xml
@@ -2,25 +2,22 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/qrcode_user"
     android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView5"
         android:layout_width="178dp"
         android:layout_height="203dp"
-        app:srcCompat="@drawable/qrcode_user"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="27dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/qrcode_sponso"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
-        android:id="@+id/shareTextView"
         android:layout_width="246dp"
         android:layout_height="82dp"
         android:text="@string/how_to_share"
@@ -51,7 +48,6 @@
         android:layout_marginEnd="8dp" />
 
     <TextView
-        android:id="@+id/bonus_earned"
         android:layout_width="264dp"
         android:layout_height="84dp"
         android:text="0 amis parrainés = 0 pts supplémentaires"
